Add post example

--- a/section_3/views/person.ejs
+++ b/section_3/views/person.ejs
@@ -4,5 +4,6 @@
     </head>
     <body>
         <h1>Hello: <%= ID.length %>!</h1>
+        <h2>Querystring value: <%= Qstr %></h2>
     </body>
 </html>
