--- a/section_3/views/index.ejs
+++ b/section_3/views/index.ejs
@@ -1,8 +1,24 @@
 <html>
     <head>
         <link href="/assets/style.css" type="text/css" rel="stylesheet" />
+        <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
     </head>
     <body>
         <h1>Hello world!</h1>
+        <form method="post" action="/person">
+            First name: <input type="text" id="firstname" name="firstname" /> <br/>
+            Last name: <input type="text" id="lastname" name="lastname" /> <br/>
+            <input type="submit" value="Submit"/>
+
+        </form>
+        <script>
+            $.ajax({
+                type: "POST",
+                url: "/personjson",
+                data: JSON.stringify({ firstname: 'Andrii', lastname: 'Kozin' }),
+                dataType: 'json',
+                contentType: 'application/json'
+            });
+        </script>
     </body>
 </html>
